// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should handle multiple failures 1`] = `
Array [
  Object {
    "description": undefined,
    "id": "someUri1",
    "image": null,
    "metadata": Object {
      "timeout": 10000,
      "uri": "someUri1",
    },
    "title": undefined,
  },
  undefined,
  undefined,
]
`;

exports[`it should retrieve metadata for a set of given links 1`] = `
Array [
  Object {
    "description": "description1",
    "id": "uri1",
    "image": "image1",
    "metadata": Object {
      "id": undefined,
      "ogImage": "image1",
    },
    "og_object": Object {
      "description": "description1",
      "title": "title1",
    },
    "title": "title1",
  },
  Object {
    "description": "description2",
    "id": "uri2",
    "image": "image2",
    "metadata": Object {
      "id": undefined,
      "ogDescription": "description2",
      "ogTitle": "title2",
      "twitterImageSrc": "image2",
    },
    "title": "title2",
  },
  Object {
    "description": "description3",
    "id": "uri3",
    "image": "image3",
    "metadata": Object {
      "id": undefined,
      "ogImage": "image3",
      "title": "title3",
      "twitterDescription": "description3",
    },
    "title": "title3",
  },
  Object {
    "description": "description4",
    "id": "uri4",
    "image": "image4",
    "metadata": Object {
      "description": "description4",
      "id": undefined,
      "ogImage": "image4",
      "ogTitle": "title4",
    },
    "title": "title4",
  },
]
`;

exports[`it should return undefined if one link fails 1`] = `
Array [
  Object {
    "description": undefined,
    "id": "someUri1",
    "image": null,
    "metadata": Object {
      "timeout": 10000,
      "uri": "someUri1",
    },
    "title": undefined,
  },
  undefined,
  Object {
    "description": undefined,
    "id": "someUri3",
    "image": null,
    "metadata": Object {
      "timeout": 10000,
      "uri": "someUri3",
    },
    "title": undefined,
  },
]
`;
